--- a/swimprograms.html
+++ b/swimprograms.html
@@ -1,48 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!--Meta Tags-->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <!--Google fonts-->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bodoni-moda">
+
+        <!-- Font Awesome -->
+         <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="styles.css" />
 
         <title>Splashes</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body id="home">
+    <body id="swimprograms">
         <div id="container">
-            <header>
-                <div class="main-header">
-                    <div class="logo">
-                        <img src="images/" alt="Splashes Logo" width="">
-                    </div>
-                    <nav class="main-menu">
-                        <ul>
-                            <li><a href="">About</a></li>
-                            <li><a href="swimlessons.html">Swim Lessons</a></li> <!--Gloria-->
-                            <li class="active"><a href="swimprograms.html">Swim Programs</a></li> <!-- Gloria-->
-                            <li><a href="">Adult Programs</a></li>
-                            <li><a href="">Locations</a></li>
-                            <li><a href="">Contact Us</a></li>
+            <header id="swim">
+                <!--<img src="images/summer-swim-camps.jpeg" alt="Kids at the Pool" width="1425" height="564">-->
+                <nav class="navbar navbar-expand-xl navbar-dark sticky-top" id="nav-bar">
+                    <a class="navbar-brand pl-4" href="index.html">
+                        <img src="images/logo-small.png" alt="Splashes Logo" width="250" height="auto">
+                    </a>
+                    <button 
+                        class="navbar-toggler ml-auto custom-toggler" 
+                        type="button" 
+                        data-toggle="collapse" 
+                        data-target="#navbarContent" 
+                        aria-controls="navbarContent" 
+                        aria-expanded = "false" 
+                        aria-label="Toggle navigation">                            
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    
+                    <div class="collapse navbar-collapse" id="navbarContent">
+                        <ul class="navbar-nav mb-2">
+                            <li class="nav-item">
+                                <a class="nav-link" href="">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="swimlessons.html">Swimming Lessons</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="swimprograms.html">Swim Programs</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="">Adult Programs</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="">Locations</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="">Contact Us</a>
+                            </li>
                         </ul>
+                          <a class="btn btn-primary rounded-pill bg-white border-0 px-3 py-2 custom-class" 
+                            id="register-btn" 
+                            href="signin.html" 
+                            role="button">
+                            Register / Sign In
+                         </a>   
                     </nav>
+                    <h2 id="swim">Summer Swim Camps</h2>
                 </div>
             </header>
 
-            <main>
+            <main id="swim">
+                <div class="container pt-3">
                 <h1>Building Swimming Skills All Summer Long</h1>
                 <p>If your child is between the ages of 5 to 14 and can swim two lengths across a 25 yard pool unassisted, consider enrolling them in our summer swim camps. Splashes Aquatics summer swim camps are held weekly throughout the summer. Discounts are also available for students who enroll in three sessions or more.</p>
                 <p>During the day, students will work with our highly qualified instructors on stroke technique, breathing, starts and turns, along with speed work. In the middle of the day, we provide students with a snack and beverage. Swim games will be run during the last 30-45 minutes of each daily session for the children to enjoy our rafts and pool toys.</p>
-                <p>Find a Splashes Aquatics swim camp location near you</p>
-                <ul>
-                    <li>Irvine</li>
-                    <li>Carlsbad</li>
-                    <li>Pasadena</li>
-                    <li></li>
-                    <li></li>
+                <p><b>Find a Splashes Aquatics swim camp location near you</b></p>
+                <ul class="no-bullets">
+                    <li><a href="url">Irvine</a></li>
+                    <li><a href="url">Carlsbad</a></li>
+                    <li><a href="url">Pasadena</a></li>
+                    <li><a href="url">San Jose</a></li>
+                    <li><a href="url">Denver/Highlands Ranch</a></li>
                 </ul>
+                </div>
 
             </main>
 
