--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!--Meta tags-->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!--Google fonts-->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bodoni-moda">
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -14,21 +18,50 @@
     <body id="home">
         <div id="container">
             <header>
-                <div class="main-header">
-                    <div class="logo">
-                        <img src="images/" alt="Splashes Logo" width="">
+                  <nav class="navbar navbar-expand-xl navbar-dark sticky-top" id="nav-bar">
+                    <a class="navbar-brand pl-4" href="index.html">
+                        <img src="images/logo-small.png" alt="Splashes Logo" width="250" height="auto">
+                    </a>
+                    <button 
+                        class="navbar-toggler ml-auto custom-toggler" 
+                        type="button" 
+                        data-toggle="collapse" 
+                        data-target="#navbarContent" 
+                        aria-controls="navbarContent" 
+                        aria-expanded = "false" 
+                        aria-label="Toggle navigation">                            
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    
+                    <div class="collapse navbar-collapse" id="navbarContent">
+                       <ul class="navbar-nav mb-2">
+                          <li class="nav-item active">
+                             <a class="nav-link" href="#">About</a>
+                          </li>
+                          <li class="nav-item">
+                             <a class="nav-link" href="#">Swimming Lessons</a>
+                          </li>
+                          <li class="nav-item">
+                             <a class="nav-link" href="#">Swim Programs</a>
+                          </li>
+                          <li class="nav-item">
+                             <a class="nav-link" href="#">Adult Programs</a>
+                          </li>
+                          <li class="nav-item">
+                             <a class="nav-link" href="#">Locations</a>
+                          </li>
+                          <li class="nav-item">
+                             <a class="nav-link" href="#">Contact Us</a>
+                          </li>
+                        </ul>  
+                        <a class="btn btn-primary rounded-pill bg-white border-0 px-3 py-2 custom-class" 
+                         id="register-btn" 
+                         href="signin.html" 
+                         role="button">
+                         Register / Sign In
+                        </a>   
                     </div>
-                    <nav class="main-menu">
-                        <ul>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Swimming Lessons</a></li>
-                            <li><a href="">Swim Programs</a></li>
-                            <li><a href="">Adult Programs</a></li>
-                            <li><a href="">Locations</a></li>
-                            <li><a href="">Contact Us</a></li>
-                        </ul>
-                    </nav>
-                </div>
+                 </nav>
             </header>
 
             <main>
