--- a/swimprograms.html
+++ b/swimprograms.html
@@ -12,9 +12,11 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bodoni-moda">
 
         <!-- Font Awesome -->
-         <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
         <!-- Custom CSS -->
         <link rel="stylesheet" href="styles.css" />
 
@@ -228,13 +230,119 @@
                     <li><a href="url">Carlsbad</a></li>
                     <li><a href="url">Pasadena</a></li>
                     <li><a href="url">San Jose</a></li>
-                    <li><a href="url">Denver/Highlands Ranch</a></li>
+                    <li id="last"><a href="url">Denver/Highlands Ranch</a></li>
                 </ul>
                 </div>
 
             </main>
+            <!--Footer-->
+            <footer class="splash-site-footer">
+            <div class="footer-logo">
+                <img src="./images/wave-small.png" alt="footer-logo" />
+            </div>
 
-            <footer>&copy; Copyright 2022</footer>
+            <div class="footer-part-one row mt-5">
+                <div class="col-md-6 col-12">
+                    <nav class="navbar navbar-expand">
+                        <ul class="navbar-nav nav-container">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                <!-- target top location and open -->
+                                <a class="nav-link" href="#">Locations</a>
+                            </li>
+                             <li class="nav-item">
+                                 <a class="nav-link" href="#">FAQs</a>
+                            </li>
+                            <li class="nav-item">
+                                 <a class="nav-link" href="./contact.html">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Register / Sign In</a>
+                             </li>
+                             <li class="nav-item">
+                                 <a class="nav-link" href="#">Careers</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-md-6 col-12 icon-wrapper">
+                    <a class="fa-stack" style="vertical-align: top; margin-left: 200px" href="#">
+                        <i class="fa-solid fa-circle fa-stack-2x" style="color: #055e97"></i>
+                        <i class="fa-brands fa-linkedin-in fa-stack-1x fa-inverse"></i>
+                     </a>
+                    <a class="fa-stack" style="vertical-align: top" href="#">
+                        <i class="fa-solid fa-circle fa-stack-2x" style="color: #656667"></i>
+                        <i class="fa-brands fa-instagram fa-stack-1x fa-inverse"></i>
+                    </a>
+                    <a class="fa-stack" style="vertical-align: top" href="#">
+                        <i class="fa-solid fa-circle fa-stack-2x" style="color: #27dffd"></i>
+                        <i class="fa-brands fa-twitter fa-stack-1x fa-inverse"></i>
+                    </a>
+                    <a class="fa-stack" style="vertical-align: top" href="#">
+                        <i class="fa-solid fa-circle fa-stack-2x" style="color: #cc0c24"></i>
+                        <i class="fa-brands fa-yelp fa-stack-1x fa-inverse"></i>
+                    </a>
+                    <a class="fa-stack" style="vertical-align: top" href="#">
+                        <i class="fa-solid fa-circle fa-stack-2x" style="color: #71b4fc"></i>
+                        <i class="fa-brands fa-facebook-f fa-stack-1x fa-inverse"></i>
+                    </a>
+                    <a class="fa-stack" style="vertical-align: top" href="#">
+                         <i class="fa-solid fa-circle fa-stack-2x" style="color: #cc0c24"></i>
+                        <i class="fa-brands fa-youtube fa-stack-1x fa-inverse"></i>
+                    </a>
+                </div>
+            </div>
+
+      <div class="footer-contact-container">
+        <div class="footer-contact">
+          <div>
+            <div>Orange County</div>
+            <a href="tel:9494500777">(949) 450-0777</a>
+          </div>
+          <div>
+            <div>San Diego County</div>
+            <a href="tel:7606039400">(760) 603-9400</a>
+          </div>
+          <div>
+            <div>Los Angeles County</div>
+            <a href="tel:6268361200">(626) 836-1200</a>
+          </div>
+          <div>
+            <div>Northern California</div>
+            <a href="tel:4082791700">(408) 279-1700</a>
+          </div>
+          <div>
+            <div>Denver</div>
+            <a href="7203447700">(720) 344-7700</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="foot-part-two-container">
+        <div class="footer-part-two row">
+          <div class="col-sm-8 col-12 sponsors-logo">
+            <div>
+              <img src="./images/sponsors/footer-usssa-logo-2.png" alt="usssa-logo" />
+            </div>
+            <div>
+              <img src="./images/sponsors/footer-ndpa-logo.png" alt="ndpa-logo" />
+            </div>
+            <div>
+              <img src="./images/sponsors/footer-member-issa-logo.png" alt="issa-logo" />
+            </div>
+            <div>
+              <img src="./images/sponsors/footer-stop-drowning-now-logo.png" alt="stop-logo" />
+            </div>
+          </div>
+          <div class="col-sm-4 col-12 copyright">
+            © 2022 Splashes.<br />
+            All Rights Reserved
+          </div>
+        </div>
+      </div>
+    </footer>
 
         </div>
 
